<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faith_bg"
    tools:context=".ServerError">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/warning"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_medium"
            android:text="@string/connection_issue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/don_t_worry_our_best_minds_are_on_it_you_may_retry_or_check_back_later"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_color_2"
                android:fontFamily="@font/sf_bold"
                android:gravity="center"
                android:text="@string/retry"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/closeApp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_color_1"
                android:fontFamily="@font/sf_bold"
                android:gravity="center"
                android:text="@string/close_app"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>